# snn

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
benchmarks/: gpu_capacity.cu  gpu_fanout_capacity.cu  step_throughput.c
build-omp/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  test_snn
build-omp/Testing/Temporary/: CTestCostData.txt
data/kmnist/: README.md
data/mnist/: README.md
docs/: gpu_capacity.md  kmnist_bptt.md  kmnist_metaplasticity.md  kmnist_snn_vs_cnn.md  kmnist_stdp.md  mnist_bptt.md  reasonable_fanout_capacity.md  report_07-12-26.md  snn_meta_optimizer.md  snn_policy_optimizer_bounds.md
docs/data/: detach.csv  detach.txt  headtohead.csv  headtohead.txt  lr.csv  lr.txt  sweep.csv  sweep.txt  timesteps.csv  timesteps.txt
docs/data/kmnist/: depth_final.csv  depth_final.txt  depth_sweep.csv  detach.csv  detach.txt  headtohead.csv  headtohead.txt  metaplasticity_cosine_curve.txt  metaplasticity_final.csv  metaplasticity_final.txt  metaplasticity_self_test.txt  stdp_final.csv  stdp_final.txt  stdp_self_test.txt  sweep.csv  sweep.txt  torch_final.csv  torch_final.txt  torch_sweep.csv
examples/: minimal.c
fuzz/: fuzz_api.c
include/snn/: snn.h  snn_bptt.h  snn_test.h
scripts/: coverage.py  depth_report.py  kmnist_depth_experiments.sh  kmnist_experiments.sh  kmnist_metaplasticity_experiments.sh  kmnist_stdp_experiments.sh  kmnist_torch_experiments.sh  mnist_experiments.sh  mnist_report.py  summarize_stdp.py  tsan.supp
src/: snn.c  snn_bptt.c  snn_cuda.cu  snn_cuda_stub.c  snn_internal.h
tests/: test_bptt.c  test_common.h  test_snn.c
tools/: bptt_cuda.cu  bptt_cuda.h  bptt_cuda_stub.c  generate_report_07_12_26_charts.py  generate_report_07_12_26_reanalysis.py  kmnist_architect.py  kmnist_cnn.py  kmnist_metaplasticity.py  kmnist_stdp.py  mnist_bptt.c  snn_meta_optimizer.py  snn_production.py  snn_production_support.py  snn_scaling.py
